# UserData-Ingestion-Pipeline

./: .gitignore  EXERCISE.md  README.md  kinesis.py  package-lock.json  package.json  pyproject.toml  serverless.yml
userdata-ingestion-pipeline/: consumer.py  producer.py
