[tool.poetry]
name = "userdata-ingestion-pipeline"
version = "0.1.0"
description = "A serverless project where we're deploying a user data ingestion pipeline using Kinesis data streams and S3"
authors = ["Aaron West <aphexlog@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.150"
requests = "^2.32.3"
mypy-boto3-kinesis = "^1.34.0"
mypy-boto3-s3 = "^1.34.138"
aws-lambda-powertools = "^2.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
